...

    Column(
        modifier = Modifier.fillMaxWidth(),
        horizontalAlignment = Alignment.CenterHorizontally,
    ) {
        AuthenticationTextField(
            modifier = Modifier.fillMaxWidth().testTag("email-field"),
            label = stringResource(R.string.authentication_form_email_label),
            value = email,
            onValueChange = {
                emailError = ""
                email = it
            },
            errorText = emailError,
        )
        Spacer(modifier = Modifier.padding(spaceBetweenTextFields))
        AuthenticationTextField(
            modifier = Modifier.fillMaxWidth().testTag("password-field"),
            label = stringResource(R.string.authentication_form_password_label),
            value = password,
            onValueChange = {
                passwordError = ""
                password = it
            },
            errorText = passwordError,
            isPasswordField = true,
        )
        if (confirmPassword) {
            Spacer(modifier = Modifier.padding(spaceBetweenTextFields))
            AuthenticationTextField(
                modifier = Modifier.fillMaxWidth().testTag("confirm-password-field"),
                label = stringResource(R.string.authentication_form_confirm_password_label),
                value = confirm,
                onValueChange = {
                    confirmError = ""
                    confirm = it
                },
...
                isPasswordField = true,
            )
        }
        Spacer(modifier = Modifier.padding(spaceBetweenTextFields))
        ElevatedButton(
            enabled = isOnline,
            modifier = Modifier.fillMaxWidth().testTag("action-button"),
            onClick = {
                if (validate) {
                    var hasError = false

                    if (email.isEmpty()) {
                        emailError = emailErrorText
...
