...
        modifier = Modifier.padding(vertical = 24.dp),
    ) {
        Text(stringResource(R.string.login_screen_don_t_have_an_account) + " ")
        Text(
            text = stringResource(R.string.register),
            color = MaterialTheme.colorScheme.primary,
            modifier = Modifier.clickable(onClick = onClick).testTag("register-button")
        )
    }
}

