...
        modifier = Modifier.padding(vertical = 24.dp),
    ) {
        Text(stringResource(R.string.register_screen_do_you_have_an_account) + " ")
        Text(
            text = stringResource(R.string.login_button),
            color = MaterialTheme.colorScheme.primary,
            modifier = Modifier.clickable(onClick = onClick).testTag("login-button")
        )
    }
}

